# tynx

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benchmarks/: BASELINES.md  Cargo.toml  README.md  bench_conv.py  bench_fusion.py  cases.json  check-training-trajectory.jq  check-training-trajectory.py  probe_lazy.py  probe_reductions.py  python-capture.py  python-training-capture.py  regression_sweep.py  training-cases.json
benchmarks/crates/burn-aot/: Cargo.toml  build.rs
benchmarks/crates/burn-aot/src/: main.rs
benchmarks/crates/ort/: Cargo.toml
benchmarks/crates/ort/src/: main.rs
benchmarks/crates/protocol/: Cargo.toml
benchmarks/crates/protocol/src/: lib.rs  training.rs
benchmarks/crates/training-burn-aot/: Cargo.toml  build.rs
benchmarks/crates/training-burn-aot/src/: main.rs
benchmarks/crates/training-tynx/: Cargo.toml
benchmarks/crates/training-tynx/src/: main.rs
benchmarks/crates/tynx/: Cargo.toml
benchmarks/crates/tynx/src/: main.rs
benchmarks/models/: fetch-mobilenetv2.sh  matmul64.onnx.hex  matmul_add_relu_dynamic.onnx.hex  matmul_dynamic.onnx.hex  mobilenetv2_100_opset16.expected.json  sign.onnx.hex  tiny_cnn.onnx
crates/tynx/: Cargo.toml
crates/tynx-capture/: Cargo.toml
crates/tynx-capture/src/: lib.rs
crates/tynx-capture/tests/: graph.rs
crates/tynx-python/: Cargo.toml  README.md  pyproject.toml
crates/tynx-python/python/tynx/: __init__.py  _tynx.pyi  checkpoint.py  compiler.py  distributions.py  optim.py
crates/tynx-python/python/tynx/nn/: __init__.py  _random.py  _utils.py  functional.py  init.py  state.py  target.py  utils.py
crates/tynx-python/python/tynx/nn/modules/: __init__.py  activation.py  container.py  convolution.py  dropout.py  linear.py  module.py  normalization.py  pooling.py  sparse.py
crates/tynx-python/python/tynx/optim/: __init__.py  lr_scheduler.py
crates/tynx-python/src/: capture.rs  device.rs  embedding.rs  grad_mode.rs  gradient.rs  imported_model.rs  lib.rs  nn.rs  optimizer.rs  parameter.rs  random.rs  tensor.rs
crates/tynx-python/src/optimizer/: adam.rs  parameters.rs  state.rs
crates/tynx-python/src/tensor/: combine.rs  comparison.rs  data.rs  extrema.rs  factory.rs  indexing.rs  reduction.rs  selection.rs  shape.rs
crates/tynx-python/tests/: external_embedding.rs  smoke.py  test_accelerated.py  test_bindings.py  test_checkpoint.py  test_combine.py  test_compile.py  test_conv2d.py  test_device_dtype.py  test_distributions.py  test_dropout.py  test_embedding.py  test_examples.py  test_expand_repeat.py  test_factories.py  test_imported_composed_models.py  test_imported_model.py  test_indexing.py  test_init.py  test_lr_scheduler.py  test_module_call.py  test_nn_namespace.py  test_optimizer_groups.py  test_ordering.py  test_pooling.py  test_ppo.py  test_register_buffer.py  test_release_artifacts.py  test_split_chunk.py  test_state_validation.py  test_tensor_threads.py  test_training_robustness.py
crates/tynx-train/: Cargo.toml
crates/tynx-train/src/: autograd.rs  backward_support.rs  gradient.rs  imported_model.rs  imported_state.rs  lib.rs  loss.rs  optimizer.rs  parameter.rs  store.rs  trainability.rs
crates/tynx-train/src/imported_model/: executor.rs  tests.rs
crates/tynx-train/src/optimizer/: adam.rs
crates/tynx-wasm/: Cargo.toml  webdriver.json
crates/tynx-wasm/npm/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
crates/tynx-wasm/npm/scripts/: prepare-package.mjs
crates/tynx-wasm/npm/src/: index.ts
crates/tynx-wasm/npm/test/: runtime.test.mjs  types.ts
crates/tynx-wasm/src/: lib.rs
crates/tynx-wasm/tests/: cpu.rs  webgpu.rs
crates/tynx-wasm/tests/common/: mod.rs
crates/tynx/src/: device.rs  error.rs  external.rs  external_wgpu.rs  initializer.rs  interpreter.rs  lib.rs  session.rs  tensor.rs  value.rs
crates/tynx/src/interpreter/: attention.rs  binary.rs  broadcasting.rs  cast.rs  classification.rs  clip.rs  col2im.rs  comparison.rs  concat.rs  control_flow.rs  convolution.rs  cumsum.rs  deform_conv.rs  dft.rs  dropout.rs  einsum.rs  extrema.rs  eye_like.rs  gather.rs  grid_sample.rs  hardmax.rs  imputer.rs  integer.rs  logical.rs  matrix.rs  mel_weight_matrix.rs  mod.rs  normalization.rs  pad.rs  pooling.rs  pow.rs  quantization.rs  random.rs  range_op.rs  reduction.rs  resize.rs  resolve.rs  scaler.rs  scatter.rs  selection.rs  (+13 more)
crates/tynx/src/interpreter/recurrent/: common.rs  gru.rs  lstm.rs  mod.rs  rnn.rs
crates/tynx/tests/: autodiff.rs  conformance.json  conformance.rs  eager_onnx_parity.rs  external_lifecycle.rs
docs/: publishing.md  python-training.md
examples/: README.md  authored_training.py  captured_ppo.py  imported_finetuning.py
examples/models/: actor_critic.onnx.hex  affine.onnx.hex
patches/cubecl-external-wgpu/: 0001-Register-external-WGPU-buffers.patch  0002-Retain-external-WGPU-leases.patch  0003-Initialize-external-compiler-runtimes.patch  0004-Use-released-WGPU-29-for-Bevy-compatibility.patch  0005-Respect-enabled-features-on-adopted-devices.patch  0006-Use-released-WGPU-passthrough-descriptors.patch  README.md
scripts/: check_release.py
tools/vendor-patches/: Cargo.toml
tools/vendor-patches/src/: main.rs
xtask/: Cargo.toml
xtask/src/: external_wgpu.rs  main.rs
