[workspace]
members = [
    "crates/tynx",
    "crates/tynx-capture",
    "crates/tynx-python",
    "crates/tynx-train",
    "crates/tynx-wasm",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blaind/tynx"
readme = "README.md"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
