[workspace]
members = [
    "crates/tynx",
    "crates/tynx-capture",
    "crates/tynx-python",
    "crates/tynx-train",
    "crates/tynx-wasm",
    "xtask",
]
exclude = [
    "vendor/repos/burn",
    "vendor/repos/cubecl",
    "vendor/repos/cubek",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blaind/tynx"
readme = "README.md"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[patch."https://github.com/tracel-ai/burn"]
burn-cubecl-fusion = { path = "vendor/repos/burn/crates/burn-cubecl-fusion" }
burn-fusion = { path = "vendor/repos/burn/crates/burn-fusion" }

[patch."https://github.com/tracel-ai/cubecl"]
cubecl-wgpu = { path = "vendor/repos/cubecl/crates/cubecl-wgpu" }

[patch."https://github.com/tracel-ai/cubek"]
cubek-reduce = { path = "vendor/repos/cubek/crates/cubek-reduce" }
