[package]
name = "tynx-python"
description = "Python bindings for the Tynx neural network runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_tynx"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }
tynx-core = { package = "tynx", path = "../tynx" }

[features]
vulkan = ["tynx-core/vulkan"]
wgpu = ["tynx-core/wgpu"]

[lints]
workspace = true
