[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "tynx"
dynamic = ["version"]
description = "A lightweight neural network runtime for inference and training"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"

[dependency-groups]
test = ["pytest>=8,<9", "pytest-xdist>=3,<4"]
typecheck = ["mypy>=1.15,<2"]
lint = [
    { include-group = "test" },
    { include-group = "typecheck" },
    "ruff>=0.12,<1",
]

[tool.maturin]
module-name = "tynx._tynx"
python-source = "python"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
files = ["python", "tests"]
mypy_path = "python"
python_version = "3.9"
strict = true
