[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "tynx"
dynamic = ["version"]
description = "A lightweight neural network runtime for inference and training"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["onnx", "machine-learning", "neural-network", "inference", "training", "burn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/blaind/tynx"
Issues = "https://github.com/blaind/tynx/issues"

[dependency-groups]
test = [
    "numpy>=1.26,<2; python_version == '3.9'",
    "numpy>=2,<2.2; python_version >= '3.10'",
    "pytest>=8,<9",
    "pytest-xdist>=3,<4",
]
lint = [
    { include-group = "test" },
    "mypy>=1.15,<2",
    "ruff>=0.12,<1",
]

[tool.maturin]
module-name = "tynx._tynx"
python-source = "python"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
files = ["python", "tests"]
mypy_path = "python"
python_version = "3.9"
strict = true
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
