[package]
name = "tynx-train"
description = "Training utilities for the Tynx neural network runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", default-features = false, features = ["std"] }
tynx-core = { package = "tynx", path = "../tynx", default-features = false, features = ["training"] }

[dev-dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", default-features = false, features = ["flex"] }
protobuf = "3"

[lints]
workspace = true
