[package]
name = "tynx"
description = "A lightweight neural network runtime for inference and training"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["machine-learning", "neural-network", "onnx", "inference", "webgpu"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", default-features = false, features = ["extension", "std"] }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "ba103c7f118524652647338dec09abf69a24a53e", optional = true, default-features = false }
log = "0.4"
onnx-ir = { git = "https://github.com/tracel-ai/burn-onnx", rev = "af2dfb43af43bf363dc2d7d858d933d86e2a65a8" }
pollster = { version = "0.4", optional = true }
protobuf = "3"
thiserror = "2"
# rev must match cubecl's pinned wgpu: a mismatch splits the crate into two instances and the
# probe's copy loses all backend features (fails the no-GPU wheel smoke test in CI).
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "bde709122f8320571ab1733ab055dcb54415a483", optional = true, default-features = false }

[features]
default = ["flex"]
external-wgpu = ["dep:cubecl"]
flex = ["burn/flex"]
training = ["burn/autodiff"]
vulkan = ["burn/vulkan", "burn/autotune", "flex", "cubecl?/wgpu-spirv", "dep:wgpu", "dep:pollster"]
wgpu = ["burn/wgpu", "burn/autotune", "flex", "cubecl?/wgpu", "dep:wgpu", "dep:pollster"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "bde709122f8320571ab1733ab055dcb54415a483", default-features = false, features = ["noop"] }

[lints]
workspace = true
