[package]
name = "tynx"
description = "A lightweight neural network runtime for inference and training"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["machine-learning", "neural-network", "onnx", "inference", "webgpu"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", default-features = false, features = ["extension", "std"] }
burn-fusion = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", optional = true, default-features = false, features = ["std"] }
burn-ir = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", optional = true, default-features = false }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "ba103c7f118524652647338dec09abf69a24a53e", optional = true, default-features = false }
log = "0.4"
onnx-ir = { git = "https://github.com/tracel-ai/burn-onnx", rev = "af2dfb43af43bf363dc2d7d858d933d86e2a65a8" }
pollster = { version = "0.4", optional = true }
protobuf = "3"
thiserror = "2"
# Keep this exact release aligned with Bevy 0.19. The external-wgpu xtask applies the same
# dependency to its patched CubeCL checkout so engine and learner share one Rust type identity.
wgpu = { version = "=29.0.3", optional = true, default-features = false }

[features]
default = ["flex"]
external-wgpu = ["dep:burn-fusion", "dep:burn-ir", "dep:cubecl"]
flex = ["burn/flex"]
training = ["burn/autodiff"]
vulkan = ["burn/vulkan", "burn/autotune", "burn/fusion", "flex", "cubecl?/wgpu-spirv", "dep:wgpu", "dep:pollster"]
wgpu = ["burn/wgpu", "burn/autotune", "burn/fusion", "flex", "cubecl?/wgpu", "dep:wgpu", "dep:pollster"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
burn-fusion = { git = "https://github.com/tracel-ai/burn", rev = "78f10aec1ca6c6ffb1edd17a0fa131ae59ad5403", default-features = false }
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "=29.0.3", default-features = false, features = ["noop"] }

[lints]
workspace = true
