[package]
name = "burn-aot-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[features]
default = ["flex"]
flex = ["burn/flex"]
mobilenet = ["tynx-bench-protocol/mobilenet"]
wgpu = [
    "burn/autotune",
    "burn/fusion",
    "burn/webgpu",
    "burn-store/wgpu",
    "tynx-bench-protocol/wgpu-device",
]

[dependencies]
burn.workspace = true
burn-store.workspace = true
tynx-bench-protocol.workspace = true

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx", rev = "af2dfb43af43bf363dc2d7d858d933d86e2a65a8" }

[lints]
workspace = true
