[package]
name = "tynx-bench-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
mobilenet = []
wgpu-device = ["dep:pollster", "dep:wgpu"]

[dependencies]
pollster = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
wgpu = { workspace = true, optional = true }

[lints]
workspace = true
