[package]
name = "tynx-training-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["flex"]
flex = ["burn/flex", "tynx-core/flex"]
multithread = ["dep:burn-flex", "burn-flex/rayon", "dep:rayon"]
wgpu = [
    "burn/autotune",
    "burn/fusion",
    "burn/webgpu",
    "tynx-core/wgpu",
    "tynx-bench-protocol/wgpu-device",
]

[dependencies]
burn.workspace = true
burn-flex = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
tynx-core = { package = "tynx", path = "../../../crates/tynx", default-features = false, features = ["training"] }
tynx-train.workspace = true
tynx-bench-protocol = { workspace = true, features = ["training"] }

[lints]
workspace = true
